<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grediant_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/header_background">

        <com.v_care.TextViews.MyCustomTextview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="10dp">

        <com.v_care.TextViews.MyCustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/header_background"
            android:text="@string/question"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.v_care.TextViews.TextView_hindi
            android:id="@+id/qus_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text=""
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/gray_text"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="8dp"/>

        <com.v_care.TextViews.MyCustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/header_background"
            android:text="@string/ans"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.v_care.TextViews.TextView_hindi
            android:id="@+id/ans_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text=""
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/gray_text"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="8dp"/>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
