<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/question_dash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@color/Questions_Background_Color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icn_questions"/>

                <com.v_care.TextViews.MyCustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/question"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/videos_dash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@color/Chat_Background_Color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icn_video" />

                <com.v_care.TextViews.MyCustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/Videos"
                    android:textColor="@color/white"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/info_dash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"

                android:background="@color/Videos_Background_Color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_reshedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icn_information" />

                <com.v_care.TextViews.MyCustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/info"
                    android:textColor="@color/white"
                    android:textSize="13sp" />


            </LinearLayout>

            <LinearLayout

                android:id="@+id/chat_dash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@color/Information_Background_Color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icn_chat" />

                <com.v_care.TextViews.MyCustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/ask_expert"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/req_dash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@color/Request_Background_Color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_pending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icn_request" />

                <com.v_care.TextViews.MyCustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/req"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signout_dash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="@color/Sign_Out_Color"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_pendingval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icn_udita_yojna" />

                <com.v_care.TextViews.MyCustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/udita"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
