<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grediant_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_background">

        <com.v_care.TextViews.MyCustomTextview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="22sp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/inner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/icn_logo"
                    android:gravity="center" />



                <com.v_care.TextViews.EditText_text
                    android:id="@+id/edEmailId_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="60dp"
                    android:background="@null"
                    android:padding="5dp"
                    android:drawableLeft="@drawable/icn_user"
                    android:drawablePadding="8dp"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"/>

                <com.v_care.TextViews.EditText_text
                    android:id="@+id/edPassword_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@null"
                    android:padding="5dp"
                    android:drawableLeft="@drawable/icn_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/passord_text"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />


                <com.v_care.TextViews.TextView_hindi
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/rounded_btn"
                    android:orientation="vertical">

                    <com.v_care.TextViews.MyCustomTextview
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/btn_txt_color"
                        android:textSize="25sp" />

                </LinearLayout>

                <!--<Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/button_background"
                    android:padding="10dp"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="18sp" />-->



                <!--<com.v_care.TextViews.MyCustomTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/social"
                    android:textColor="@color/green_background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white" />-->

<!--
                <LinearLayout
                    android:id="@+id/liner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <RelativeLayout
                            android:id="@+id/rel_fbbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_btn">

                            <TextView
                                android:id="@+id/signup_button_signin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/icn_fb" />
                        </RelativeLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <RelativeLayout
                            android:id="@+id/rel_gbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_btn_google">

                            <TextView
                                android:id="@+id/signup_button_sign"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/icn_google" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
-->

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:background="@color/header_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <com.v_care.TextViews.MyCustomTextview
                android:id="@+id/text_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <com.v_care.TextViews.MyCustomTextview
                android:id="@+id/signuphere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/text_sign"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/text_sign"
                android:text="@string/Signup"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_alignEnd="@+id/signuphere"
                android:layout_alignLeft="@+id/signuphere"
                android:layout_alignRight="@+id/signuphere"
                android:layout_alignStart="@+id/signuphere"
                android:layout_below="@+id/signuphere"
                android:background="@color/white" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
